infra/k8s/manifests/indexer.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer
  namespace: m0club
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indexer
  template:
    metadata:
      labels:
        app: indexer
    spec:
      containers:
        - name: indexer
          image: ghcr.io/m0club/indexer:latest
